# ChangeLog for app-admin/collectd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/collectd/ChangeLog,v 1.44 2012/10/30 19:34:16 hwoarang Exp $

*collectd-5.1.0-r2 (30 Oct 2012)

  30 Oct 2012; Markos Chandras <hwoarang@gentoo.org> +collectd-5.1.0-r2.ebuild,
  +files/collectd-5.1.0-libperl.patch, +files/collectd-5.1.0-mongoc06.patch:
  Revbump for #436538 and #437680. Thanks to Johan Bergström
  <bugs@bergstroem.nu>

  16 Sep 2012; Pacho Ramos <pacho@gentoo.org> -collectd-5.1.0.ebuild,
  metadata.xml:
  This package has a proxy maintainer, move to proxy-maintainers herd until some
  dev volunteers to proxy it. Drop old.

  11 Sep 2012; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
  Drop maintainership

  31 May 2012; Zac Medico <zmedico@gentoo.org> collectd-5.1.0-r1.ebuild,
  collectd-5.1.0.ebuild:
  inherit multilib for get_libdir

  25 May 2012; Andreas K. Huettel <dilfridge@gentoo.org> collectd-5.1.0.ebuild,
  metadata.xml:
  Enable threshold and v5upgrade plugins

  24 May 2012; Mike Frysinger <vapier@gentoo.org> collectd-5.1.0-r1.ebuild,
  collectd-5.1.0.ebuild:
  Inherit user for enewuser/etc...

*collectd-5.1.0-r1 (07 May 2012)

  07 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -files/collectd-5.0.0-varnish.patch, -files/collectd-5.0.0-yajl2-2.patch,
  -files/collectd-5.0.0-yajl2.patch, -files/collectd-5.0.1-varnish.patch,
  -collectd-5.0.2-r1.ebuild, -files/collectd-5.0.2-irq.patch,
  -files/collectd-5.0.2-message.patch, collectd-5.1.0.ebuild,
  +collectd-5.1.0-r1.ebuild, +files/collectd-5.1.0-netlink.patch:
  Fix compilation with newest iproute2 / libnetlink, bug 413993

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> collectd-5.0.2-r1.ebuild,
  collectd-5.1.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*collectd-5.1.0 (08 Apr 2012)

  08 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +collectd-5.1.0.ebuild, metadata.xml:
  Version bump
