@@ -12,28 +12,31 @@ AUX collectd-4.10.3-werror.patch 849 SHA256 c9b70f892f96c0d5da5d65702679bc0b4a38
 AUX collectd-5.1.0-libperl.patch 935 SHA256 1e4aaa19809f0f3b02e6056d0d7538607239863f6e29c2f94cea42cb1714304d SHA512 e9853f93245d30ec83f67a15a90c6c39d757a3d56b20eb292655da7dc312039bb697647ecef364e21238015afd81d06d4dcd371406b6f9ab6cdabc417f817a02 WHIRLPOOL 099aedf2879dac61fbcf1a39f98c6208a842cc1e6928c628b2e2bf072a48da9d98874460579202c5c45c3698aecc5e0d973ede1ae6cf48f15cb7d74f06e13a21
 AUX collectd-5.1.0-mongoc06.patch 824 SHA256 12eef9d80b314ca53f26db66261992f5e201f8a90bd0da8ca79fec1b6e570dc0 SHA512 9e299fd5216e96e9f0f25e1f1e33ea823f63077b3694b0f04361b8da437a71fe24d6710f6bcd5574834469c0fa19d4fe4cbafc6a10d99a0622df1d4bd85931e6 WHIRLPOOL 28ba4f08fad3ea2c39310553a5050d299f728650557bdad9e981513dc0b4d46560c5503f893b4b0f6514a65f88b2493956ef3d4d5cbe4dd8891149bed55fbd11
 AUX collectd-5.1.0-netlink.patch 714 SHA256 06eaaaa452da20d6d441a0a98108fa81b2ab17ce5b7842e6ea546e777374f47b SHA512 8c2a51f8176f62c9bc5a4230b4dd2c05b3b616d5b8799e9cd3704580ea2b994d765ad1c52d5a7c0a986bbf3ae53465009ec77fd5affbfbc6ca511d7f6eaaa5c6 WHIRLPOOL 411f3694af6e9db6688638afa8095125305d56e9f8e3bf0e82429b266b2353fb4c88003bbc1784cf0bfaa525d01d539b39586ccaa3334fde4da71a113172f81b
+AUX collectd-5.1.1-lt.patch 827 SHA256 c5af9d57d03f66a9651779c041847304e58464f3b680af8973411d126fae00ac SHA512 33dcddf3e1c094ce35c827d3f61cb6cdd8b6da49488a34055797b830e00d8abeff3aeaf0911dd1e100bb4d98479bef71c4f97cb94cafdd987721d1a921d1d17e WHIRLPOOL 327dbd1ccc1993fc21fdd651d021ac7cc794220b91e0f7811a3134b4a18d91dbf42f172dcec82b24bb8948e8095af3bd1fd7d4e128c9776f933af4ba15a1667d
 AUX collectd.confd 865 SHA256 c24b11a65cb25587aa534c529a2b394b7c190ac44e1849ea5e1bc02d1e0a1592 SHA512 4df752ec2af61dfbf7856c8ec09d299ab0db6ae6e1e223a6c65a4261f13cadd2d9d66f20ee307906dd1ed4ef184244aa323e80a0aba7c655970b1bf5a06992b3 WHIRLPOOL 0935d68ab660ed7ec63b9dd4a9287e88716a6665e5ac04b0b8e7dda468f29577e5014f69a6b42cafef5b19ae4fdf249625586dc579fcabd7ddcc5d65087c3bb9
 AUX collectd.initd 1649 SHA256 9db6809d7e7991208d35bc517c71d12a5fa8b8453f096a433e386259c7301163 SHA512 4a46e55c63933a762401c537a49a108c93ae6dc2b4e8576869f1b5b693fa822d68456d83fa72548a30e8775cd5d01c7ed3a1567336091d9622db3eec66fdcd1c WHIRLPOOL dcedcc3ec33fcc350232ee26f8d9a04b64808b450dd66e348b80501fb8b96f466a264782cf8e748d8653227ef8b307c8ebdcea9d816adadfcfaadb2c742269bb
 AUX logrotate 115 SHA256 eb359631805b6bfb9f2a9ae5ed21be8f8b3b6f1ffeed8d506231043c9a77262c SHA512 87ec01784d415f00834c2b20614f11f7e08b70f88d7c87509a8b8fd7e1af8758565b9ed6a6840af7bf1006cb941a61a6ff4f3176f6ded722728f24483b08bc8e WHIRLPOOL ba884cecfc7fc41e1fc8661d5e92c4519718ebddc4d919dd94d2183f377076efdad19f460ace810e1505cd2005bd64addf34306841993af9d754df633709a003
 DIST collectd-5.1.0.tar.bz2 1305538 SHA256 521d4be7df5bc1124b7b9ea88227e95839a5f7c1b704a5bde0f60f058ec6eecb SHA512 c107bdad66d90d6e299ba0da68cc0726e3b0541efd7d672687713f5a414765d2afbd66a8c834da36dafe201dc0ec97caf80844d5f0354503fa67fcbfe0d43725 WHIRLPOOL 3de7d344d622ac20cb63fc0ce78e5d18c7d57d52e76ea09a47fc58bc339cf1108baa521e142a3d386f56dbf7a83311f2f93489241f2061da90900617f1715e8c
+DIST collectd-5.1.1.tar.bz2 1331678 SHA256 0eeb8e45c83ba13fa00bd4f6875528e8a13769ba218205785d40b861489bf1fd SHA512 5d5f30ddb9ded3b48b64efdc1a4dbbbfe1601c16fc2450a7d1a1786493b12e01da66f23eca4d59853326b3c598b2fa9475f036e78e0d9e50b3f5ddd3a37c3c9b WHIRLPOOL 6a7256f1dc526bd0b6cb4c4845d511257c2c61c0de9c17ecff6751ad89698eb4127fe1cba4919920772bacd2a3c6966201ea162e61caf8e9f4e5baeaa0fb20e2
 EBUILD collectd-5.1.0-r1.ebuild 13039 SHA256 79521d9f28c13621de895bd9c4dd9c0f9011d132c50c0333caefd69dfd1dda58 SHA512 8000c771e827fb23aafa4af402e713b17a537cb5dac17f5423cceed3da27da53f6d80aae0c9cff3c29102bfbedc4282db0a7d6ed6627371f717276a3e1b9c548 WHIRLPOOL df9aef6f32f53c6a2e838d446e17f41e99349533d6a7aaa2bc1b7ab061ae51ad31d5d41d45aa11c328a18ec964542d61e9c350c63439c9c6bf61b0e6a2710e74
 EBUILD collectd-5.1.0-r2.ebuild 13143 SHA256 0edea50f8894b2735858679655d83c2e68611d17757f598051da5f1b82c167c9 SHA512 a099084e14dadc7948206cfd524c75d13007cb526fff85551438f5f5554427e79367d6e8aaaeb7c82623ded288de5a3e7067caea4242eab3a79f998aab4b2697 WHIRLPOOL 54d377f35bcaf1d99d2bbf28fe5c6ace98cae4a24c39a040e82695510bf48c8d0fe6bd46d4674d45d1eb903ec47123001b845e8f157f8e96c7fc4d554e40872f
-MISC ChangeLog 9001 SHA256 4a3db099b98241368a6d17d0e1b6deb6bb2a802be3d98f39d6cd8af5d18009c3 SHA512 c4cc69381661a4336b94c5ba6be9f1d9d975b07ed6f7c6d5c0140dbc28a28f616662b7598be5f70940dc94149382846636a29d24caa7c1efcbece9fbfaee57f6 WHIRLPOOL c6497daab9488e0f3a6f5e91b8d575ea3d9df5ef9255450058319e05df9d988491c8d2ff00590ed7d587c5fcaa759473eae9824997a69fe77b7109aa141552e8
+EBUILD collectd-5.1.1.ebuild 12793 SHA256 2886400be1158927f355830915d95f16591a02879398377fdef92073e7639178 SHA512 ef246c01d7995ebee8a80efaef4d6bc0f0364417223c6bdb8f0597f8d26713dac96d7965347c6bed8cdde59118cfefdd58e82e65ec40b338dfebc5406d824c49 WHIRLPOOL fecc426e7bbb61ee38b4d8198f24c7675223b182e8613ecd0b3b5afbc162a448c56c03590faba37cda4e6c8f008776bc78cfac488ab21ab86d94b8acf76ad3ec
+MISC ChangeLog 9221 SHA256 012a2c39c53e0d5c48fc708300558755eb7a38af0c74a3789169daa5cfcacaf5 SHA512 de879fcfa7f03cd0a2bd55127fc0ae75a45963a9ad6a188a15581bcebce45318a861989790c58e2ff8eff34547f6e43631c22e04afd59a9d90793d61981c4f67 WHIRLPOOL 0cbeb6113234940846639083e3c874b6b711fa96a108234d9190072d781ccafd18f996cd32ab9c633e35e6a1d97bb2e47602a84e796c8561c1f272b2940ad206
 MISC metadata.xml 12479 SHA256 b9185660fbb34e888e50be1e9eb27270e6d3743a147c289d991f0d89bf62141e SHA512 7d3fe03386c4c3c53ed0236206d65a5cd9aa3b15d7254fd98b0d44bc6c70d487d1491845181dbc9fa795635d83d9194e5a618bb37ff822a3a3bb2169f5672812 WHIRLPOOL 73db0a994adf29c0eb1615891f988d4f1a4d676e51861ea87e4b69dee1348db66b816f610dfdc32337355320cb1c87e8920d31c23782ee4a326d2c641a192473
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQkCu4AAoJEPqDWhW0r/LClq0P/jHcvRKrh3BqGXqOHh9krVm7
-/yVObScmf3NbEiMy87R6QkBbfScqkIv0Qu2wCNdQWbtUcCEK59cDdXgMUZ6PaW2/
-z4RrEvB6j+q630Cz8UrTVv63jMAvr1b0CdScHL3sh9qU2rXrJrUHHEjqguLSDPv9
-NJuv8h/MNELCop/66cKkKtR7Y7znyqOfNI8o6oGzGkwPRKz2UDQJ9dfGmTCiCYN/
-FQ+1aNuhrq1I814LQMHedMGT1FAM3Nd0xZV19QlTdx4UJRo1X/VEWN8A78AoWFGq
-2fGl/TKZPvIJbI7IAfotiFFktXH5PdYgOR7yeYfa6NZ8HUt7ARhl+nAOKYiHT4Ul
-eC2nZSX+ssqx0KJjr6TJImgBRywWSPYgTV4D4PxbOEA337lOY8Ww5ef+Q45M4cbY
-dAjgR7RBE/xRTklYnOoc5vxdR1WSIdq6Tznfq/XOFSZkgfdyJAcnWsusbWu3dwzo
-0se3oWUZTVYZ9HNdZhJKHgyYIusLYPVByfLs42inN6zUH9hO7TU+znUK1oFnh+8Q
-WxtCau7b+gIfyIqNno0Y0B7crDj5YrG3IFwuC8oxzPF3wDuV9oONEGzR3crDFEAh
-EhjNbs1GRnWMSDszvKtUIjbdJ8XQqkgkgpG6s0suUrBl+CVTLjLbPUcC/gO6Zk0f
-kNvAqBAqrXtdcu8zh466
-=aXL8
+iQIcBAEBCAAGBQJQqoi/AAoJEPqDWhW0r/LCLrwP/3rXzQP+WPz0g9nZ6iVSlA3U
+XmZbUdCK8JeudX37iNsYcpgbmrBdFYOX2V/1YG0H4IRhroeFedXsfvbWLR41npWc
+o9xo2xVMZzhB1EQu9Vt/VI0G8+7w2AJUVByodzrYsyuQLAVBV0wocXJeKRonujWC
+TGe9YoHXkXoDUw/jX9E4JMqtMfeldUk32H+2AqDRaZot/aroQP3wUPrJncgEVupG
+lhnoP94VGhyf9g5OuWZwpTt7AYhYAXeanzL4291eWIiX2FKhL8+GJ9FNgChr7dJx
+C31t5G12WgF8LabSDfbAZKHPGlFmgagu2re6KoG69uVB63h1HobmAunptbFHkj2o
+Rc5qipVbJ0MgT4O2iYBxsgVpkzUJI56iAcga+I5K08eulwqvVl2ayM0AjVDraFcp
+xFvCx3gBb4hVZw/Srh9Z0DH85+YqAOO+eIuVrLeW6Kr2H1/9DLV0c8urneJ6iaZQ
+V+Insnc3u22NNA8TL0AoU+fgCvPN900+/QQXWp0jVK8jvdYGKd382OhdDiui29Xn
+yG2UOtvgFtzAecR5uonjhyxzqRVKLoMGg/GfrIGQUcVEorvjf1LlBOm0pSdKhcsX
+nD4yFbQw6l0PPlRDyZKK0oEQxJZpIkbaFOaOYIoSp3QXx7wvdcoAMAzmA9flSaGu
+XIQtYK8AEAsCWxqMkjTF
+=EZAR
 -----END PGP SIGNATURE-----
