@@ -1,0 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
+DIST Net-Whois-IP-1.10.tar.gz 25379 SHA256 f6fcf44ebc3ad683cfa711e80f3eddfc41a9473d9963d095c43e40d5c79862ad SHA512 0dd44a9329c30578163938cd75c1a660fbf2e03ae17adeeaf1b2d92b44af7ddd3ef53263a7e5702b7e591df27636c3445c72ec2b6cc48def4df15363e3bfe6a0 WHIRLPOOL 274fdb552e9386387cda7a02c4773fa619e3d008676a57e37db7ad6ec106453093d4c89537d06013dc03a80ede83db87c6c08ca993e4b5774d25ee1c2a310e55
+EBUILD Net-Whois-IP-1.100.0.ebuild 477 SHA256 d85f3adaa04488da430ac2ba90ec21ab4019f308da28addf042929c0a2fa2068 SHA512 d723c6c17b350ec779bc45e22516601921f86625b1484796af8e0e79d199c68307b358a2c4b53a76822fd0859a06cc1b04067160f463776d351f89f9c34e43e4 WHIRLPOOL 5dd0d50b6dccb30702069c7665253c425bf948679d0e9908c4b9552968f745751d56166622b47a289cea3b834acc3c60c0f31c62a81dad2365b53cbb6fb1df10
+MISC ChangeLog 429 SHA256 919ce24186b0b2ab111aafa327aa78fd3bb8a833498bb28b0c3732bd15340e8a SHA512 930342d4c4bd7faaa10d11de4a5f63dab6ff77eac3e71f0b01ea2701b710c9a74657c526d52a0c417ceb8d91c931775e7e7ee29322892bfd86e4d8cdcd557c13 WHIRLPOOL 49c91fc82f8d14f81edb4dc04a9c7327f6cb9c0f83c38a43d69342ab71f22fb2382a2571c31a26e229c6dc6e652415045da7793e19da63fd4eb7e9849d46204e
+MISC metadata.xml 293 SHA256 ff4a316a62eeb28951e85fcb7f47b620f59c746773de2ed0300e8d4dcc8b0711 SHA512 9a0796e506a577566272e9869e1195c4b12d0be7a697752bb30f70dd77ecd1c7b27327cc78808c365163b53fe9ca70fdd84243f30e491842e6748822de5d1eef WHIRLPOOL 158bdbf8ffde72db49c8d62e2c854f60e02ee2ee5563b0cfbd88d549a5a2636ff304fabc585f73c867fa3e3c1fdf787b00607a05d751bd6975fc1e6295f260d6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCgAGBQJQqnyLAAoJEKXdFCfdEflKCvkP/3HUqvuh9LVp423s6d1fVDh1
+iRN8i2oH0IK6wy19aS+KOtVDdsTyqTzbfsxBRsnfhNCp7CPXlaMyu8HLArQxfIX5
+n4UBQJiDlbdTpZlh4NThM5rsySFzNoWDJxyTRQd6AsxpPzOtQXxzfQfdoBCaAhfA
+rMvbW186EZsNKA0lLeEct/7B4H+5t+l/44ychM15xCd8GrMI0r38D8INDPQESI4M
+puu/bbaVnKO+3bOyOmbKjJYuBhXlKXYgAYBZptghSLFOdblAUa2Ol4TcLQvdLEuP
+JUlk+M1REX0UwXYqb7sCcNwlyaJ9KzPmG6QKwdmQ1+V/qkH6NYLvV970fA8FU3Xn
+ruQ76sEWQhD5+DN5LDmKd1Z2HXiAj/XyM7ay1kWgRPfTzQETn08PomXLkWuZNSWh
+R/C82Ie4ITwkLl9S/xowd+jVbtH9t9EqYQXRR8ocMuL9YGSaxAenA9iVcP1TzkQy
+pnYNvYUqQbHWCgoK+RTlMtUbgDaIAg+dL5ztqZpEgFgdOMIIEkFa2fAaedi9LFy4
+2oqfGpPmnpRr4hHlMrYoG8PO9hpGz6ph9ZCLK/wOT+ouluN23fBIcPODlDpo0se3
+fBl5czisp0SWVvQ1PhKBifGqs2SGJeh6mxw02JVEaCwdiGT6wHEBJHjDf7wJSjR9
+PCfeptevXTdqUhPV5b0Y
+=7U/b
+-----END PGP SIGNATURE-----
