@@ -1,0 +1,9 @@
+# ChangeLog for dev-perl/Net-Whois-IP
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Whois-IP/ChangeLog,v 1.1 2012/11/19 18:37:39 zerochaos Exp $
+
+*Net-Whois-IP-1.100.0 (19 Nov 2012)
+
+  19 Nov 2012; Rick Farina <zerochaos@gentoo.org> +Net-Whois-IP-1.100.0.ebuild,
+  +metadata.xml:
+  added for use as rdep in dnsenum, thanks to tove for helping cleanup/style
