@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/collectd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/collectd/ChangeLog,v 1.44 2012/10/30 19:34:16 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/collectd/ChangeLog,v 1.45 2012/11/19 19:30:06 hwoarang Exp $
+
+*collectd-5.1.1 (19 Nov 2012)
+
+  19 Nov 2012; Markos Chandras <hwoarang@gentoo.org> +collectd-5.1.1.ebuild,
+  +files/collectd-5.1.1-lt.patch:
+  Version bump. Bug #443170. Thanks to Johan Bergström <bugs@bergstroem.nu>
 
 *collectd-5.1.0-r2 (30 Oct 2012)
 
